<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:id="@+id/main"
    tools:context=".ActivityReportLostDog">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:textStyle="bold"
        android:textSize="35sp"
        android:textColor="@color/black"
        android:text="@string/button_report_lost_dog"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/breedlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/breed">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/breed"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/detailslayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/breedlayout"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/details">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/details"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSubmit"
        android:layout_below="@id/detailslayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:paddingBottom="10dp"
        android:text="@string/submit" />

</RelativeLayout>
